// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Latency trend plot component renders latency plot 1`] = `
<body>
  <svg
    id="js-plotly-tester"
    style="position: absolute; left: -10000px; top: -10000px; width: 9000px; height: 9000px; z-index: 1;"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:xlink="http://www.w3.org/1999/xlink"
  >
    <path
      class="js-reference-point"
      d="M0,0H1V1H0Z"
      style="stroke-width: 0; fill: black;"
    />
  </svg>
  <div>
    <div
      id="explorerPlotComponent"
      style="width: 100%;"
    />
  </div>
</body>
`;

exports[`Latency trend plot component renders line plot with multiple points 1`] = `
<body>
  <div>
    <div
      id="explorerPlotComponent"
      style="width: 100%; height: 100%;"
    />
  </div>
</body>
`;

exports[`Latency trend plot component renders line plot with single point 1`] = `
<body>
  <svg
    id="js-plotly-tester"
    style="position: absolute; left: -10000px; top: -10000px; width: 9000px; height: 9000px; z-index: 1;"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:xlink="http://www.w3.org/1999/xlink"
  >
    <path
      class="js-reference-point"
      d="M0,0H1V1H0Z"
      style="stroke-width: 0; fill: black;"
    />
  </svg>
  <div>
    <div>
      -
    </div>
  </div>
</body>
`;
